Update phone mockup UI and add package.json
Refined the phone mockup in index.html and styles.css for a more generic QWERTY design, removing BlackBerry branding and improving visual details. Added package.json with live-server for local development. Updated .gitignore for Node.js and environment files.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zinwa Q25 - Physical Keyboard Smartphone | Android 14 AOSP</title>
-    <meta name="description" content="Zinwa Q25 smartphone featuring a physical QWERTY keyboard, MediaTek Helio G99, 12GB RAM, 256GB storage, Android 14 AOSP. Productivity redefined with BlackBerry Classic design.">
-    <meta name="keywords" content="Zinwa Q25, physical keyboard smartphone, QWERTY phone, Android 14, BlackBerry alternative, productivity phone, NFC, 50MP camera">
+    <meta name="description" content="Zinwa Q25 smartphone featuring a physical QWERTY keyboard, MediaTek Helio G99, 12GB RAM, 256GB storage, Android 14 AOSP. Productivity redefined with a classic QWERTY design.">
+    <meta name="keywords" content="Zinwa Q25, physical keyboard smartphone, QWERTY phone, Android 14, productivity phone, NFC, 50MP camera">
     <meta name="author" content="Zinwa Technologies">
     <meta name="theme-color" content="#000000">
     
@@ -84,15 +84,13 @@
                     <div class="phone-bezel-top"></div>
                     <div class="phone-screen"></div>
                     <div class="phone-bezel-bottom">
-                        <div class="phone-logo">BlackBerry</div>
+                        <div class="phone-silver-strip" aria-hidden="true"></div>
                         <div class="phone-trackpad-area">
-                            <button class="call-button" aria-label="Call"></button>
-                            <div class="trackpad"></div>
-                            <button class="menu-button" aria-label="Menu"></button>
-                            <div class="trackpad"></div>
-                            <button class="back-button" aria-label="Back"></button>
-                            <div class="trackpad"></div>
-                            <button class="end-button" aria-label="End"></button>
+                            <button class="btn-small" aria-label="Call"></button>
+                            <button class="btn-small" aria-label="Menu"></button>
+                            <div class="trackpad-square" role="button" tabindex="0" aria-label="Trackpad"></div>
+                            <button class="btn-small" aria-label="Back"></button>
+                            <button class="btn-small" aria-label="End"></button>
                         </div>
                         <div class="phone-keyboard">
                             <div class="keyboard-row">
