Add Vercel Analytics integration
Integrated Vercel Analytics by including the analytics script in index.html and initializing the global va function. Added @vercel/analytics as a dependency in package.json.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
     <link rel="canonical" href="https://zinwa.cn/">
     
     <link rel="stylesheet" href="styles.css">
+    <script defer src="https://cdn.vercel-analytics.com/v1/web/analytics.js"></script>
 </head>
 <body>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments) };
+    </script>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
